--- a/templates/index.html
+++ b/templates/index.html
@@ -125,7 +125,7 @@
     </div>
     <div class="container">
         <div class="logo">
-            <img src="logo2.png" alt="Logo"> <!-- Replace 'logo.png' with your logo -->
+            <img src="/static/logo2.png" alt="Logo"> <!-- Replace 'logo.png' with your logo -->
         </div>
         <div class="description">
             <h2>SharkByte Upload Ver: 1.0</h2>
